--- a/StocksViewer.UI/appsettings.json
+++ b/StocksViewer.UI/appsettings.json
@@ -13,6 +13,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OrdersDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "FinnhubToken": "cg4phr9r01qu5q9f9sugcg4phr9r01qu5q9f9sv0",
   "Serilog": {
     "MinimumLevel": "Information",
     "Using": [
