Connection to MySql Server

--- a/StocksViewer.UI/appsettings.json
+++ b/StocksViewer.UI/appsettings.json
@@ -11,7 +11,8 @@
     "Top25PopularStocks": "AAPL,MSFT,AMZN,TSLA,GOOGL,GOOG,NVDA,BRK.B,META,UNH,JNJ,JPM,V,PG,XOM,HD,CVX,MA,BAC,ABBV,PFE,AVGO,COST,DIS,KO"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OrdersDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OrdersDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AZURE_MYSQL_CONNECTIONSTRING": "Server=orders-list-sql.mysql.database.azure.com;Database=orders-database;Port=3306;User Id=roxana21;Password=virusimmunity123#;SSL Mode=Required"
   },
   "FinnhubToken": "cg4phr9r01qu5q9f9sugcg4phr9r01qu5q9f9sv0",
   "Serilog": {
